# rviz_attitude_plugin

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/rviz_attitude_plugin/: attitude_display.hpp  attitude_widget.hpp  euler_converter.hpp  overlay_system.hpp  supported_types.hpp  topic_utilities.hpp
include/rviz_attitude_plugin/widgets/: aircraft_reference.hpp  angle_readout.hpp  artificial_horizon.hpp  attitude_indicator.hpp  heading_indicator.hpp  roll_indicator.hpp
src/: attitude_display.cpp  attitude_widget.cpp  overlay_system.cpp
src/widgets/: aircraft_reference.cpp  angle_readout.cpp  artificial_horizon.cpp  attitude_indicator.cpp  heading_indicator.cpp  roll_indicator.cpp
